package com.example.smartparking.data.api

object ApiRoutes {
    const val BASE_URL = "https://2e4b-194-226-11-155.ngrok-free.app"
    const val AUTHENTICATE = "/login"
    const val REGISTRATION = "/register"
    const val CARS = "/cars"
    const val ADD_CAR = "/add-car"
    const val DELETE_CAR = "/delete-car"
    const val PARKING = "/parking"
    const val BOOKING = "/booking"
    const val ADD_BOOKING = "/add-booking"
    const val AVAILABLE_SLOTS = "/available-slots"
}