package com.example.smartparking.data.sharedPref

object SharedPrefNames {
    const val USER_INFO = "USER_INFO"
    const val LOGIN = "LOGIN"
    const val USER_NAME = "USER_NAME"
    const val TOKEN = "TOKEN"
    const val EMAIL = "EMAIL"
}